get rid of spring boot